@@ -46,6 +46,7 @@ import org.apache.maven.api.MonotonicClock;
 import org.apache.maven.api.services.LifecycleRegistry;
 import org.apache.maven.api.services.MavenException;
 import org.apache.maven.api.xml.XmlNode;
+import org.apache.maven.api.xml.XmlService;
 import org.apache.maven.execution.BuildFailure;
 import org.apache.maven.execution.BuildSuccess;
 import org.apache.maven.execution.ExecutionEvent;
@@ -54,11 +55,10 @@ import org.apache.maven.execution.MavenSession;
 import org.apache.maven.execution.ProjectDependencyGraph;
 import org.apache.maven.execution.ProjectExecutionEvent;
 import org.apache.maven.execution.ProjectExecutionListener;
+import org.apache.maven.impl.util.PhasingExecutor;
 import org.apache.maven.internal.MultilineMessageHelper;
 import org.apache.maven.internal.impl.DefaultLifecycleRegistry;
-import org.apache.maven.internal.impl.util.PhasingExecutor;
-import org.apache.maven.internal.transformation.ConsumerPomArtifactTransformer;
-import org.apache.maven.internal.xml.XmlNodeImpl;
+import org.apache.maven.internal.transformation.TransformerManager;
 import org.apache.maven.lifecycle.LifecycleExecutionException;
 import org.apache.maven.lifecycle.LifecycleNotFoundException;
 import org.apache.maven.lifecycle.LifecyclePhaseNotFoundException;
@@ -70,6 +70,7 @@ import org.apache.maven.lifecycle.internal.GoalTask;
 import org.apache.maven.lifecycle.internal.LifecycleTask;
 import org.apache.maven.lifecycle.internal.MojoDescriptorCreator;
 import org.apache.maven.lifecycle.internal.MojoExecutor;
+import org.apache.maven.lifecycle.internal.ReactorBuildStatus;
 import org.apache.maven.lifecycle.internal.ReactorContext;
 import org.apache.maven.lifecycle.internal.Task;
 import org.apache.maven.lifecycle.internal.TaskSegment;
@@ -100,20 +101,50 @@ import static org.apache.maven.lifecycle.internal.concurrent.BuildStep.PLAN;
 import static org.apache.maven.lifecycle.internal.concurrent.BuildStep.PLANNING;
 import static org.apache.maven.lifecycle.internal.concurrent.BuildStep.SCHEDULED;
 import static org.apache.maven.lifecycle.internal.concurrent.BuildStep.SETUP;
+import static org.apache.maven.lifecycle.internal.concurrent.BuildStep.SKIPPED;
 import static org.apache.maven.lifecycle.internal.concurrent.BuildStep.TEARDOWN;
 
 /**
- * Builds the full lifecycle in weave-mode (phase by phase as opposed to project-by-project).
- * <p>
- * This builder uses a number of threads equal to the minimum of the degree of concurrency (which is the thread count
- * set with <code>-T</code> on the command-line) and the number of projects to build. As such, building a single project
- * will always result in a sequential build, regardless of the thread count.
- * </p>
- * <strong>NOTE:</strong> This class is not part of any public api and can be changed or deleted without prior notice.
+ * Executes the Maven build plan in a concurrent manner, handling the lifecycle phases and plugin executions.
+ * This executor implements a weave-mode build strategy, where builds are executed phase-by-phase rather than
+ * project-by-project.
+ *
+ * <h2>Key Features:</h2>
+ * <ul>
+ *   <li>Concurrent execution of compatible build steps across projects</li>
+ *   <li>Thread-safety validation for plugins</li>
+ *   <li>Support for forked executions and lifecycle phases</li>
+ *   <li>Dynamic build plan adjustment during execution</li>
+ * </ul>
+ *
+ * <h2>Execution Strategy:</h2>
+ * <p>The executor follows these main steps:</p>
+ * <ol>
+ *   <li>Initial plan creation based on project dependencies and task segments</li>
+ *   <li>Concurrent execution of build steps while maintaining dependency order</li>
+ *   <li>Dynamic replanning when necessary (e.g., for forked executions)</li>
+ *   <li>Project setup, execution, and teardown phases management</li>
+ * </ol>
+ *
+ * <h2>Thread Management:</h2>
+ * <p>The number of threads used is determined by:</p>
+ * <pre>
+ * min(degreeOfConcurrency, numberOfProjects)
+ * </pre>
+ * where degreeOfConcurrency is set via the -T command-line option.
+ *
+ * <h2>Build Step States:</h2>
+ * <ul>
+ *   <li>CREATED: Initial state of a build step</li>
+ *   <li>PLANNING: Step is being planned</li>
+ *   <li>SCHEDULED: Step is queued for execution</li>
+ *   <li>EXECUTED: Step has completed successfully</li>
+ *   <li>FAILED: Step execution failed</li>
+ * </ul>
+ *
+ * <p><strong>NOTE:</strong> This class is not part of any public API and can be changed or deleted without prior notice.</p>
  *
  * @since 3.0
- *         Builds one or more lifecycles for a full module
- *         NOTE: This class is not part of any public api and can be changed or deleted without prior notice.
  */
 @Named
 public class BuildPlanExecutor {
@@ -125,7 +156,7 @@ public class BuildPlanExecutor {
     private final MojoExecutor mojoExecutor;
     private final ExecutionEventCatapult eventCatapult;
     private final ProjectExecutionListener projectExecutionListener;
-    private final ConsumerPomArtifactTransformer consumerPomArtifactTransformer;
+    private final TransformerManager transformerManager;
     private final BuildPlanLogger buildPlanLogger;
     private final Map<String, MojoExecutionConfigurator> mojoExecutionConfigurators;
     private final MavenPluginManager mavenPluginManager;
@@ -138,7 +169,7 @@ public class BuildPlanExecutor {
             @Named("concurrent") MojoExecutor mojoExecutor,
             ExecutionEventCatapult eventCatapult,
             List<ProjectExecutionListener> listeners,
-            ConsumerPomArtifactTransformer consumerPomArtifactTransformer,
+            TransformerManager transformerManager,
             BuildPlanLogger buildPlanLogger,
             Map<String, MojoExecutionConfigurator> mojoExecutionConfigurators,
             MavenPluginManager mavenPluginManager,
@@ -147,7 +178,7 @@ public class BuildPlanExecutor {
         this.mojoExecutor = mojoExecutor;
         this.eventCatapult = eventCatapult;
         this.projectExecutionListener = new CompoundProjectExecutionListener(listeners);
-        this.consumerPomArtifactTransformer = consumerPomArtifactTransformer;
+        this.transformerManager = transformerManager;
         this.buildPlanLogger = buildPlanLogger;
         this.mojoExecutionConfigurators = mojoExecutionConfigurators;
         this.mavenPluginManager = mavenPluginManager;
@@ -225,11 +256,12 @@ public class BuildPlanExecutor {
                 pplan.status.set(PLANNING); // the plan step always need planning
                 BuildStep setup = new BuildStep(SETUP, project, null);
                 BuildStep teardown = new BuildStep(TEARDOWN, project, null);
+                teardown.executeAfter(setup);
                 setup.executeAfter(pplan);
                 plan.steps(project).forEach(step -> {
-                    if (step.predecessors.isEmpty()) {
+                    if (step.predecessors.stream().noneMatch(s -> s.project == project)) {
                         step.executeAfter(setup);
-                    } else if (step.successors.isEmpty()) {
+                    } else if (step.successors.stream().noneMatch(s -> s.project == project)) {
                         teardown.executeAfter(step);
                     }
                 });
@@ -266,8 +298,7 @@ public class BuildPlanExecutor {
                         .filter(execution -> !execution.getMojoDescriptor().isV4Api())
                         .collect(Collectors.toSet());
                 if (!unsafeExecutions.isEmpty()) {
-                    for (String s : MultilineMessageHelper.format(
-                            """
+                    for (String s : MultilineMessageHelper.format("""
                                 Your build is requesting concurrent execution, but this project contains the \
                                 following plugin(s) that have goals not built with Maven 4 to support concurrent \
                                 execution. While this /may/ work fine, please look for plugin updates and/or \
@@ -314,44 +345,151 @@ public class BuildPlanExecutor {
             this.executor.close();
         }
 
-        private void executePlan() {
-            if (reactorContext.getReactorBuildStatus().isHalted()) {
-                return;
+        /**
+         * Processes a single build step, deciding whether to schedule it for execution or skip it.
+         *
+         * @param step The build step to process
+         */
+        private void processStep(BuildStep step) {
+            // 1. Apply reactor failure behavior to decide whether to schedule or skip
+            ReactorBuildStatus status = reactorContext.getReactorBuildStatus();
+            boolean isAfterStep = step.name.startsWith(AFTER);
+            boolean shouldExecute;
+
+            // Check if all predecessors are executed successfully
+            boolean allPredecessorsExecuted = step.predecessors.stream().allMatch(s -> s.status.get() == EXECUTED);
+
+            // Special case for after:* steps - they should run if their corresponding before:* step ran
+            if (isAfterStep) {
+                String phaseName = step.name.substring(AFTER.length());
+                // Always process after:* steps for cleanup if their before:* step ran
+                shouldExecute = plan.step(step.project, BEFORE + phaseName)
+                        .map(s -> {
+                            int stepStatus = s.status.get();
+                            return stepStatus == EXECUTED;
+                        })
+                        .orElse(false);
+
+                // Check if any predecessor failed - if so, we'll run the step but mark it as SKIPPED
+                boolean anyPredecessorFailed = step.predecessors.stream().anyMatch(s -> s.status.get() == FAILED);
+
+                // If any predecessor failed, we'll use a special status transition: CREATED -> SKIPPED
+                // This ensures the step runs for cleanup but is marked as skipped in the end
+                if (shouldExecute && anyPredecessorFailed) {
+                    // We'll run the step but mark it as SKIPPED instead of SCHEDULED
+                    if (step.status.compareAndSet(CREATED, SKIPPED)) {
+                        logger.debug(
+                                "Running after:* step {} for cleanup but marking it as SKIPPED because a predecessor failed",
+                                step);
+                        executor.execute(() -> {
+                            try {
+                                executeStep(step);
+                                executePlan();
+                            } catch (Exception e) {
+                                step.status.compareAndSet(SKIPPED, FAILED);
+                                // Store the exception in the step for handling in the TEARDOWN phase
+                                step.exception = e;
+                                logger.debug("Stored exception for step {} to be handled in TEARDOWN phase", step, e);
+                                // Let the scheduler handle after:* phases and TEARDOWN in the next cycle
+                                executePlan();
+                            }
+                        });
+                        return; // Skip the rest of the method since we've handled this step
+                    }
+                }
+            } else if (TEARDOWN.equals(step.name)) {
+                // TEARDOWN should always run to ensure proper cleanup and error handling
+                // We'll handle success/failure reporting inside the TEARDOWN phase
+                shouldExecute = true;
+            } else {
+                // For regular steps:
+                // Don't run for halted builds, blacklisted projects, or if predecessors failed
+                shouldExecute = !status.isHalted() && !status.isBlackListed(step.project) && allPredecessorsExecuted;
             }
-            Clock global = clocks.computeIfAbsent(GLOBAL, p -> new Clock());
+
+            // 2. Either schedule the step or mark it as skipped based on the decision
+            if (shouldExecute && step.status.compareAndSet(CREATED, SCHEDULED)) {
+                boolean nextIsPlanning = step.successors.stream().anyMatch(st -> PLAN.equals(st.name));
+                executor.execute(() -> {
+                    try {
+                        executeStep(step);
+                        if (nextIsPlanning) {
+                            lock.writeLock().lock();
+                            try {
+                                plan();
+                            } finally {
+                                lock.writeLock().unlock();
+                            }
+                        }
+                        executePlan();
+                    } catch (Exception e) {
+                        step.status.compareAndSet(SCHEDULED, FAILED);
+
+                        // Store the exception in the step for handling in the TEARDOWN phase
+                        step.exception = e;
+                        logger.debug("Stored exception for step {} to be handled in TEARDOWN phase", step, e);
+
+                        // Let the scheduler handle after:* phases and TEARDOWN in the next cycle
+                        executePlan();
+                    }
+                });
+            } else if (step.status.compareAndSet(CREATED, SKIPPED)) {
+                // Skip the step and provide a specific reason
+                if (!shouldExecute) {
+                    if (status.isHalted()) {
+                        logger.debug("Skipping step {} because the build is halted", step);
+                    } else if (status.isBlackListed(step.project)) {
+                        logger.debug("Skipping step {} because the project is blacklisted", step);
+                    } else if (TEARDOWN.equals(step.name)) {
+                        // This should never happen given we always process TEARDOWN steps
+                        logger.warn("Unexpected skipping of TEARDOWN step {}", step);
+                    } else {
+                        logger.debug("Skipping step {} because a dependency has failed", step);
+                    }
+                } else {
+                    // Skip because predecessors failed or were skipped
+                    logger.debug(
+                            "Skipping step {} because one or more predecessors did not execute successfully", step);
+                }
+                // Recursively call executePlan to process steps that depend on this one
+                executePlan();
+            }
+        }
+
+        private void executePlan() {
+            // Even if the build is halted, we still want to execute TEARDOWN and after:* steps
+            // for proper cleanup, so we don't return early here
+            Clock global = getClock(GLOBAL);
             global.start();
             lock.readLock().lock();
             try {
+                // Process build steps in a logical order:
+                // 1. Find steps that are not yet started (CREATED status)
+                // 2. Check if all their predecessors have completed (in a terminal state)
+                // 3. Process each step (schedule or skip based on reactor failure behavior)
                 plan.sortedNodes().stream()
-                        .filter(step -> step.status.get() == CREATED)
-                        .filter(step -> step.predecessors.stream().allMatch(s -> s.status.get() == EXECUTED))
-                        .filter(step -> step.status.compareAndSet(CREATED, SCHEDULED))
-                        .forEach(step -> {
-                            boolean nextIsPlanning = step.successors.stream().anyMatch(st -> PLAN.equals(st.name));
-                            executor.execute(() -> {
-                                try {
-                                    executeStep(step);
-                                    if (nextIsPlanning) {
-                                        lock.writeLock().lock();
-                                        try {
-                                            plan();
-                                        } finally {
-                                            lock.writeLock().unlock();
-                                        }
-                                    }
-                                    executePlan();
-                                } catch (Exception e) {
-                                    step.status.compareAndSet(SCHEDULED, FAILED);
-                                    global.stop();
-                                    handleBuildError(reactorContext, session, step.project, e, global);
-                                }
-                            });
-                        });
+                        // 1. Filter steps that are in CREATED state
+                        .filter(BuildStep::isCreated)
+                        // 2. Check if all predecessors are in a terminal state
+                        .filter(step -> step.predecessors.stream().allMatch(BuildStep::isDone))
+                        // 3. Process each step
+                        .forEach(this::processStep);
             } finally {
                 lock.readLock().unlock();
             }
         }
 
+        /**
+         * Executes a single build step, which can be one of:
+         * - PLAN: Project build planning
+         * - SETUP: Project initialization
+         * - TEARDOWN: Project cleanup
+         * - Default: Actual mojo/plugin executions
+         *
+         * @param step The build step to execute
+         * @throws IOException If there's an IO error during execution
+         * @throws LifecycleExecutionException If there's a lifecycle execution error
+         */
         private void executeStep(BuildStep step) throws IOException, LifecycleExecutionException {
             Clock clock = getClock(step.project);
             switch (step.name) {
@@ -359,35 +497,74 @@ public class BuildPlanExecutor {
                     // Planning steps should be executed out of normal execution
                     throw new IllegalStateException();
                 case SETUP:
-                    consumerPomArtifactTransformer.injectTransformedArtifacts(
-                            session.getRepositorySession(), step.project);
+                    attachToThread(step);
+                    transformerManager.injectTransformedArtifacts(session.getRepositorySession(), step.project);
                     projectExecutionListener.beforeProjectExecution(new ProjectExecutionEvent(session, step.project));
                     eventCatapult.fire(ExecutionEvent.Type.ProjectStarted, session, null);
                     break;
                 case TEARDOWN:
-                    projectExecutionListener.afterProjectExecutionSuccess(
-                            new ProjectExecutionEvent(session, step.project, Collections.emptyList()));
-                    reactorContext
-                            .getResult()
-                            .addBuildSummary(new BuildSuccess(step.project, clock.wallTime(), clock.execTime()));
-                    eventCatapult.fire(ExecutionEvent.Type.ProjectSucceeded, session, null);
+                    attachToThread(step);
+
+                    // Check if there are any stored exceptions for this project
+                    List<Throwable> failures = null;
+                    boolean allStepsExecuted = true;
+                    for (BuildStep projectStep : plan.steps(step.project).toList()) {
+                        Exception exception = projectStep.exception;
+                        if (exception != null) {
+                            if (failures == null) {
+                                failures = new ArrayList<>();
+                            }
+                            failures.add(exception);
+                        }
+                        allStepsExecuted &= step == projectStep || projectStep.status.get() == EXECUTED;
+                    }
+
+                    if (failures != null) {
+                        // Handle the stored exception
+                        Throwable failure;
+                        if (failures.size() == 1) {
+                            failure = failures.get(
+                                    0); // Single exception, no need to wrap it in a LifecycleExecutionException
+                        } else {
+                            failure = new LifecycleExecutionException("Error building project");
+                            failures.forEach(failure::addSuppressed);
+                        }
+                        handleBuildError(reactorContext, session, step.project, failure);
+                    } else if (allStepsExecuted) {
+                        // If there were no failures, report success
+                        projectExecutionListener.afterProjectExecutionSuccess(
+                                new ProjectExecutionEvent(session, step.project, Collections.emptyList()));
+                        reactorContext
+                                .getResult()
+                                .addBuildSummary(new BuildSuccess(step.project, clock.wallTime(), clock.execTime()));
+                        eventCatapult.fire(ExecutionEvent.Type.ProjectSucceeded, session, null);
+                    } else {
+                        eventCatapult.fire(ExecutionEvent.Type.ProjectSkipped, session, null);
+                    }
                     break;
                 default:
-                    List<MojoExecution> executions = step.executions().collect(Collectors.toList());
+                    List<MojoExecution> executions = step.executions().toList();
                     if (!executions.isEmpty()) {
-                        attachToThread(step.project);
-                        session.setCurrentProject(step.project);
+                        attachToThread(step);
                         clock.start();
-                        executions.forEach(mojoExecution -> {
-                            mojoExecutionConfigurator(mojoExecution).configure(step.project, mojoExecution, true);
-                            finalizeMojoConfiguration(mojoExecution);
-                        });
-                        mojoExecutor.execute(session, executions);
-                        clock.stop();
+                        try {
+                            executions.forEach(mojoExecution -> {
+                                mojoExecutionConfigurator(mojoExecution).configure(step.project, mojoExecution, true);
+                                finalizeMojoConfiguration(mojoExecution);
+                            });
+                            mojoExecutor.execute(session, executions);
+                        } finally {
+                            clock.stop();
+                        }
                     }
                     break;
             }
             step.status.compareAndSet(SCHEDULED, EXECUTED);
+        }
+
+        private void attachToThread(BuildStep step) {
+            BuildPlanExecutor.attachToThread(step.project);
+            session.setCurrentProject(step.project);
         }
 
         private Clock getClock(Object key) {
@@ -398,7 +575,7 @@ public class BuildPlanExecutor {
             lock.writeLock().lock();
             try {
                 Set<BuildStep> planSteps = plan.allSteps()
-                        .filter(st -> PLAN.equals(st.name))
+                        .filter(step -> PLAN.equals(step.name))
                         .filter(step -> step.predecessors.stream().allMatch(s -> s.status.get() == EXECUTED))
                         .filter(step -> step.status.compareAndSet(PLANNING, SCHEDULED))
                         .collect(Collectors.toSet());
@@ -561,21 +738,38 @@ public class BuildPlanExecutor {
                     .orElse(phase);
         }
 
+        /**
+         * Handles build errors by recording the error, notifying listeners, and updating the ReactorBuildStatus
+         * based on the reactor failure behavior.
+         * <p>
+         * This method works in conjunction with the filtering in executePlan():
+         * - For FAIL_FAST: Sets ReactorBuildStatus to halted, which causes executePlan to only process after:* steps
+         * - For FAIL_AT_END: Blacklists the project and its dependents, which causes executePlan to skip them
+         * - For FAIL_NEVER: Does nothing special, allowing all projects to continue building
+         * <p>
+         * Note: TEARDOWN steps are not executed for failed or blacklisted projects, as they're designed for
+         * successful project completions.
+         *
+         * @param buildContext The reactor context
+         * @param session The Maven session
+         * @param mavenProject The project that failed
+         * @param t The exception that caused the failure
+         */
         protected void handleBuildError(
                 final ReactorContext buildContext,
                 final MavenSession session,
                 final MavenProject mavenProject,
-                Throwable t,
-                final Clock clock) {
+                Throwable t) {
             // record the error and mark the project as failed
+            Clock clock = getClock(mavenProject);
             buildContext.getResult().addException(t);
             buildContext
                     .getResult()
                     .addBuildSummary(new BuildFailure(mavenProject, clock.execTime(), clock.wallTime(), t));
 
             // notify listeners about "soft" project build failures only
-            if (t instanceof Exception && !(t instanceof RuntimeException)) {
-                eventCatapult.fire(ExecutionEvent.Type.ProjectFailed, session, null, (Exception) t);
+            if (t instanceof Exception exception && !(t instanceof RuntimeException)) {
+                eventCatapult.fire(ExecutionEvent.Type.ProjectFailed, session, null, exception);
             }
 
             // reactor failure modes
@@ -709,7 +903,7 @@ public class BuildPlanExecutor {
                             return Stream.of(a, b, c);
                         })
                         .collect(Collectors.toMap(n -> n.name, n -> n));
-                // for each phase, make sure children phases are execute between pre and post steps
+                // for each phase, make sure children phases are executed between before and after steps
                 lifecycle.allPhases().forEach(phase -> phase.phases().forEach(child -> {
                     steps.get(BEFORE + child.name()).executeAfter(steps.get(BEFORE + phase.name()));
                     steps.get(AFTER + phase.name()).executeAfter(steps.get(AFTER + child.name()));
@@ -749,16 +943,27 @@ public class BuildPlanExecutor {
             plan.allSteps().filter(step -> step.phase != null).forEach(step -> {
                 Lifecycle.Phase phase = step.phase;
                 MavenProject project = step.project;
-                phase.links().stream()
-                        .filter(l -> l.pointer().type() != Lifecycle.Pointer.Type.PROJECT)
-                        .forEach(link -> {
-                            String n1 = phase.name();
-                            String n2 = link.pointer().phase();
-                            // for each project, if the phase in the build, link after it
-                            getLinkedProjects(projects, project, link).forEach(p -> plan.step(p, AFTER + n2)
-                                    .ifPresent(a -> plan.requiredStep(project, BEFORE + n1)
-                                            .executeAfter(a)));
+                phase.links().stream().forEach(link -> {
+                    BuildStep before = plan.requiredStep(project, BEFORE + phase.name());
+                    BuildStep after = plan.requiredStep(project, AFTER + phase.name());
+                    Lifecycle.Pointer pointer = link.pointer();
+                    String n2 = pointer.phase();
+                    if (pointer instanceof Lifecycle.DependenciesPointer) {
+                        // For dependencies: ensure current project's phase starts after dependency's phase completes
+                        // Example: project's compile starts after dependency's package completes
+                        // TODO: String scope = ((Lifecycle.DependenciesPointer) pointer).scope();
+                        projects.get(project)
+                                .forEach(p -> plan.step(p, AFTER + n2).ifPresent(before::executeAfter));
+                    } else if (pointer instanceof Lifecycle.ChildrenPointer) {
+                        // For children: ensure bidirectional phase coordination
+                        project.getCollectedProjects().forEach(p -> {
+                            // 1. Child's phase start waits for parent's phase start
+                            plan.step(p, BEFORE + n2).ifPresent(before::executeBefore);
+                            // 2. Parent's phase completion waits for child's phase completion
+                            plan.step(p, AFTER + n2).ifPresent(after::executeAfter);
                         });
+                    }
+                });
             });
 
             // Keep projects in reactors by GAV
@@ -784,19 +989,6 @@ public class BuildPlanExecutor {
             lifecycle.aliases().forEach(alias -> plan.aliases().put(alias.v3Phase(), alias.v4Phase()));
 
             return plan;
-        }
-
-        private List<MavenProject> getLinkedProjects(
-                Map<MavenProject, List<MavenProject>> projects, MavenProject project, Lifecycle.Link link) {
-            if (link.pointer().type() == Lifecycle.Pointer.Type.DEPENDENCIES) {
-                // TODO: String scope = ((Lifecycle.DependenciesPointer) link.pointer()).scope();
-                return projects.get(project);
-            } else if (link.pointer().type() == Lifecycle.Pointer.Type.CHILDREN) {
-                return project.getCollectedProjects();
-            } else {
-                throw new IllegalArgumentException(
-                        "Unsupported pointer type: " + link.pointer().type());
-            }
         }
     }
 
@@ -830,7 +1022,7 @@ public class BuildPlanExecutor {
                 ? mojoExecution.getConfiguration().getDom()
                 : null;
         if (executionConfiguration == null) {
-            executionConfiguration = new XmlNodeImpl("configuration");
+            executionConfiguration = XmlNode.newInstance("configuration");
         }
 
         XmlNode defaultConfiguration = getMojoConfiguration(mojoDescriptor);
@@ -838,42 +1030,42 @@ public class BuildPlanExecutor {
         List<XmlNode> children = new ArrayList<>();
         if (mojoDescriptor.getParameters() != null) {
             for (Parameter parameter : mojoDescriptor.getParameters()) {
-                XmlNode parameterConfiguration = executionConfiguration.getChild(parameter.getName());
+                XmlNode parameterConfiguration = executionConfiguration.child(parameter.getName());
 
                 if (parameterConfiguration == null) {
-                    parameterConfiguration = executionConfiguration.getChild(parameter.getAlias());
+                    parameterConfiguration = executionConfiguration.child(parameter.getAlias());
                 }
 
-                XmlNode parameterDefaults = defaultConfiguration.getChild(parameter.getName());
+                XmlNode parameterDefaults = defaultConfiguration.child(parameter.getName());
 
                 if (parameterConfiguration != null) {
-                    parameterConfiguration = parameterConfiguration.merge(parameterDefaults, Boolean.TRUE);
+                    parameterConfiguration = XmlService.merge(parameterConfiguration, parameterDefaults, Boolean.TRUE);
                 } else {
                     parameterConfiguration = parameterDefaults;
                 }
 
                 if (parameterConfiguration != null) {
-                    Map<String, String> attributes = new HashMap<>(parameterConfiguration.getAttributes());
+                    Map<String, String> attributes = new HashMap<>(parameterConfiguration.attributes());
 
-                    String attributeForImplementation = parameterConfiguration.getAttribute("implementation");
+                    String attributeForImplementation = parameterConfiguration.attribute("implementation");
                     String parameterForImplementation = parameter.getImplementation();
                     if ((attributeForImplementation == null || attributeForImplementation.isEmpty())
                             && ((parameterForImplementation != null) && !parameterForImplementation.isEmpty())) {
                         attributes.put("implementation", parameter.getImplementation());
                     }
 
-                    parameterConfiguration = new XmlNodeImpl(
+                    parameterConfiguration = XmlNode.newInstance(
                             parameter.getName(),
-                            parameterConfiguration.getValue(),
+                            parameterConfiguration.value(),
                             attributes,
-                            parameterConfiguration.getChildren(),
-                            parameterConfiguration.getInputLocation());
+                            parameterConfiguration.children(),
+                            parameterConfiguration.inputLocation());
 
                     children.add(parameterConfiguration);
                 }
             }
         }
-        XmlNode finalConfiguration = new XmlNodeImpl("configuration", null, null, children, null);
+        XmlNode finalConfiguration = XmlNode.newInstance("configuration", children);
 
         mojoExecution.setConfiguration(finalConfiguration);
     }
